# polarization

./: Cargo.toml  README.md
proptest-regressions/: jones.txt
proptest-regressions/jones/: common.txt  hwp.txt  identity.txt  polarizer.txt  retarder.txt  rotator.txt  system.txt
src/: core.rs  jones.rs  lib.rs
src/jones/: common.rs  composite.rs  hwp.rs  identity.rs  mod.rs  polarizer.rs  qwp.rs  retarder.rs  rotator.rs  system.rs
