[package]
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]
name = "polarization"
version = "0.1.3"
description = "Simulate the polarization of a laser beam"
repository = "https://github.com/zmitchell/polarization"
homepage = "https://github.com/zmitchell/polarization"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["physics", "lasers", "optics"]
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = "~0.16.0"
num = "~0.2.0"

[dev-dependencies]
proptest = "~0.8.5"
assert_approx_eq = "~1.0.0"
